tests/errors/lex_test30.kt
// This file contains an illegal token
value
